# dataset-editor

./: .gitignore  README.md  doc.md
advanced_dataset_editor/: APP_JS_FIX_NEEDED.md  ARCHITECTURE_DIAGRAM.md  CODE_SNIPPETS.md  INDEX.md  MANUAL_IMPLEMENTATION_GUIDE.md  MULTI_SELECT_COMPLETE.md  MULTI_SELECT_CROPS_FEATURE.md  OPTIMIZATION_ANALYSIS.md  QUICK_START_OPTIMIZATION.md  README.md  README_ANALYSIS.md  STEP_4_TESTING.md  STEP_5_ADD_PRELOADING.md  VERIFICATION_GUIDE.md  build_log.txt  build_log_2.txt  check_braces.py  package-lock.json  package.json  webpack.config.js
advanced_dataset_editor/src/: App.js  ContextMenu.css  ContextMenu.js  Dashboard.js  DatasetMonitor.js  ImageCropper.js  MergeDatasets.js  TestingSection.js  index.html  index.js  styles.css
advanced_dataset_editor/src-tauri/: Cargo.toml  tauri.conf.json
advanced_dataset_editor/src-tauri/src/: lib.rs  main.rs
advanced_dataset_editor/src/components/: ContextMenu.js  Dashboard.js  DatasetMonitor.js  LoadingProgress.js  VirtualImageGrid.js
advanced_dataset_editor/src/hooks/: MemoryMonitorHook.js
advanced_dataset_editor/src/styles/: LoadingProgress.css  VirtualImageGrid.css  styles.css
advanced_dataset_editor/src/utils/: ImageCache.js  ImageUtils.js  fileSystem.js
