[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "1", features = [ "custom-protocol", "process-all", "window-all", "fs-all", "dialog-all"] }
sys-info = "0.9"
zip = { version = "0.6", features = ["deflate"] }
image = "0.25"
sysinfo = "0.30"
simple_logger = "1.16"
base64 = "0.21"

[features]
custom-protocol = ["tauri/custom-protocol"]

